objects/EmployeeAddress__c.object
<CustomObject>
    <description>A history of addresses for each employee.</description>
    <fields>
        <fullName>CityName__c</fullName>
        <description>City name</description>
        <inlineHelpText>City name</inlineHelpText>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>County name</description>
        <inlineHelpText>County name</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Employee Addresses</relationshipLabel>
        <relationshipName>CountyEmployeeAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The date this address became the employee&apos;s address</description>
        <inlineHelpText>The date this address became the employee&apos;s address</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeAddressEID__c</fullName>
        <description>The Enterprise ID for this Employee Address.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Employee Address.</inlineHelpText>
        <label>Employee Address EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <description>The employee associated with this address</description>
        <inlineHelpText>The employee associated with this address</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employee Addresses</relationshipLabel>
        <relationshipName>EmployeeAddresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FlowSession__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow Session</label>
        <referenceTo>FlowSession__c</referenceTo>
        <relationshipLabel>Employee Addresses</relationshipLabel>
        <relationshipName>EmployeeAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(Employee__r.Name, 25)) &amp; &apos;_&apos; &amp; Trim(Left(StreetAddressText__c, 25)) &amp; &apos;_&apos; &amp; Trim(Left(	CityName__c, 24)) &amp; &apos;_&apos; &amp; Trim(Left(State__r.Name,3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE2EmployeeAddressId__c</fullName>
        <description>Employee address ID from IE2</description>
        <externalId>true</externalId>
        <inlineHelpText>Employee address ID from IE2</inlineHelpText>
        <label>IE2 Employee Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>State name</description>
        <inlineHelpText>State name</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Employee Addresses</relationshipLabel>
        <relationshipName>StateEmployeeAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StreetAddressText__c</fullName>
        <description>The employee&apos;s full street address including suite, apartment, etc.</description>
        <inlineHelpText>The employee&apos;s full street address including suite, apartment, etc.</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>Zip Code</description>
        <inlineHelpText>Zip Code</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employee Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>StreetAddressText__c</columns>
        <columns>CityName__c</columns>
        <columns>State__c</columns>
        <columns>ZipCode__c</columns>
        <columns>County__c</columns>
        <columns>EffectiveDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>